# OSuRV_2023

./: README.md
Common/Scripts/avrwaf/: arduino.py
s4a/Docs/: Dokumentacija.odt
s4a/ROS/arm_and_chassis_ws/: tmuxer.cfg.py
s4a/ROS/s4a_ws/: tmuxer.cfg.py
s4a/ROS/s4a_ws/src/arm_teleop/src/: jog_pos_teleop.py
s4a/ROS/s4a_ws/src/common_teleop/launch/: _common_teleop.launch
s4a/ROS/s4a_ws/src/common_teleop/snapshoot_logs/: for_arm_routines.tsv
s4a/ROS/s4a_ws/src/s3a_main/: package.xml
s5a/Docs/: .~lock.Dokumentacija.odt#
s5a/FW/Servo_Motor_Ctrl/: 02_read_id.cpp  10_ctrl_v1.cpp  andrej_10_ctrl_v1.cpp  flow.sh  wscript
s5a/ROS/s5a_ws/: tmuxer.cfg.py
s5a/ROS/s5a_ws/src/arm_teleop/config/: servo_server_config.yaml  servo_server_config_over_traj.yaml
s5a/ROS/s5a_ws/src/arm_teleop/launch/: jog_teleop.launch
s5a/ROS/s5a_ws/src/common_teleop/: CMakeLists.txt
s5a/ROS/s5a_ws/src/common_teleop/launch/: routines_teleop.launch
s5a/ROS/s5a_ws/src/common_teleop/src/: tf_publish.cpp
s5a/ROS/s5a_ws/src/s3a_main/: CMakeLists.txt
s5a/ROS/s5a_ws/src/s3a_main/urdf/: arm.urdf.xacro  hand.urdf.xacro
s5a/ROS/s5a_ws/src/s3a_moveit_config/launch/: moveit.rviz
s5a/ROS/s5a_ws/src/s3a_serial_main/launch/: main.launch
s5a/ROS/s5a_ws/src/s5a_main/: CMakeLists.txt  package.xml  setup.py
s5a/ROS/s5a_ws/src/s5a_main/config/: controllers.yaml
s5a/ROS/s5a_ws/src/s5a_main/launch/: check_geom.launch  (+1 more)
s5a/ROS/s5a_ws/src/s5a_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
s5a/ROS/s5a_ws/src/s5a_serial_main/: CMakeLists.txt  package.xml  setup.py
(+29 files in other folders)
