<package>
	<name>s3a_main</name>
	<version>0.1.0</version>
	<description>
		Small 4-DOF robotic arm.
	</description>
	<maintainer email="milos.subotic.sm@gmail.com">Milos Subotic</maintainer>
	<author email="milos.subotic.sm@gmail.com">Milos Subotic</author>
	<license>Proprietary</license>

	<buildtool_depend>catkin</buildtool_depend>

</package>
